# nautilus-adapter-bitbank

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  benchmark_data.py  live_order_test.py  live_smoke_test.py  pyproject.toml
.github/workflows/: ci.yml  release.yml  tag-and-release.yml
docs/: developer_guide.md  future_roadmap.md  phase3_plan.md  remaining_issues.md
examples/: README.md  account_info.py  fetch_history.py  manual_orders.py  multi_symbol.py  simple_strategy.py  start_node.py  subscribe_data.py
nautilus_bitbank/: __init__.py  config.py  constants.py  data.py  execution.py  factories.py  providers.py  types.py
scripts/: verify_currency_registration.py
src/: error.rs  lib.rs
src/client/: data_client.rs  execution_client.rs  mod.rs  pubnub.rs  rest.rs  websocket.rs
src/model/: assets.rs  market_data.rs  mod.rs  order.rs  orderbook.rs  pubnub.rs
tests/: conftest.py  simulate_reconnect.py  test_config.py  test_data_client.py  test_execution_client.py  test_live_orders.py  test_live_smoke.py
