[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "nautilus-adapter-bitbank"
version = "0.2.0"
description = "Bitbank adapter for NautilusTrader"
requires-python = ">=3.11"
dependencies = [
    "nautilus-trader>=1.204.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "nautilus_bitbank._nautilus_bitbank"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: marks tests as requiring live API connection (deselect with '-m \"not live\"')",
    "order: marks tests that execute real orders (deselect with '-m \"not order\"')",
]
